Use a rolling file appender for logs (from Nobuhiro Itou)

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Further patches have been submitted by:
   Charles Coffing <ccoffing-at-novell-dot-com>
   Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>
   Richard W.M. Jones <rjones-at-redhat-dot-com>
+  Nobuhiro Itou <fj0873gn-at-aa-dot-jp-dot-fujitsu-dot-com>
 
   <...send a patch & get your name here...>
 
