--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Further patches have been submitted by:
   Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>
   Richard W.M. Jones <rjones-at-redhat-dot-com>
   Nobuhiro Itou <fj0873gn-at-aa-dot-jp-dot-fujitsu-dot-com>
+  Mark Johnson <johnson-dot-nh-at-gmail-dot-com>
 
   <...send a patch & get your name here...>
 
