--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Further patches have been submitted by:
   Richard W.M. Jones <rjones-at-redhat-dot-com>
   Nobuhiro Itou <fj0873gn-at-aa-dot-jp-dot-fujitsu-dot-com>
   Mark Johnson <johnson-dot-nh-at-gmail-dot-com>
+  Cole Robinson <crobinso-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
